# vmi-front

./: CNAME  README_actix.md  deploy-nginx-hpa.yaml  high-page.js  high-worker.js  index.html  redis.sh  stack.asm  stack.html  standalone-web-deploy.sh  webgpu.html
core/: Cargo.toml
core/src/: add.wat  lib.rs
coredns/: config-map.yaml
devops/: bash_profile.sh
devops/coredns/: coredns.sh
devops/mongo/: mongo.sh
devops/mongo/node-0/: mongod.conf
devops/postgres/: postgres.sh
devops/postgres/node-0/: postgres.conf
devops/redis/: redis.sh
ingress/: README.md  baremetal-deploy.yaml  ingress-http.yaml  ingress-https.yaml  tomcat-nginx.yaml
